# claude-interactive-agent-harness-to-sdk

./: README.md  pyproject.toml
docs/: ARCHITECTURE.md  AUTHORING.md  CONTRACT.md  PROMOTION.md
experts/: __init__.py
experts/_template/: DEV.md  README.md  __init__.py  __main__.py  expert.py  expert.yaml
experts/_template/playbooks/: example-issue.md
experts/_template/scripts/: collect_example.sh
experts/_template/skills/gather-example/: SKILL.md
harness/: __init__.py  cli.py  contract.py  playbook.py  registry.py  scripts.py
triage/: AGENT.md  routing.md
