[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-interactive-agent-harness-to-sdk"
version = "0.1.0"
description = "Triage harness: grow expertise interactively, promote it into autonomous callable agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Needed only when an expert's ask() is upgraded from the deterministic stub
# into a real model-backed agent. The core framework and the template run
# without it.
sdk = ["claude-agent-sdk"]

[tool.setuptools.packages.find]
# Discover the shared core and every expert (including nested skill/script dirs
# are data, not packages). Leading-underscore packages like _template are
# included explicitly.
include = ["harness*", "experts*"]
